debug.txt
  File "/home/runner/work/bsa-social-media/bsa-social-media/scripts/generate_posts.py", line 342
    </svg>'''
             ^
SyntaxError: f-string expression part cannot include a backslash
